# data_structures

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: linked_list.h
main/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/linked_list/: CMakeLists.txt  linked_list.h  linked_list_functions.c  linked_list_private.h  linked_list_private_functions.c  linked_list_public_functions.c  linked_list_structs.c
src/stack/: CMakeLists.txt  make_stack.txt  makefile  stack  stack.c  stack_private.h
src/test/: CmakeTest  make_test.txt  test  test.c
src/unity/: CMakeLists.txt
tests/: CMakeLists.txt  base_test.cc  linked_list_test.cc  unity_base_test.c
tests/linked_list/: linked_list_test.c
